--- a/css/sytle.css
+++ b/css/sytle.css
@@ -20,7 +20,82 @@
     width: 200px;
 }
 
+#btn {
+    height: 100px;
+    margin-top: 60px;
+    line-height: 100px;
+    text-align: center;
+    font-family: "BebasNeue";
+    transition: all 1s;
+}
 
+#btn a{
+    display: block;
+    font-family: "BebasNeue";
+    font-size: 40px;
+    letter-spacing: 3px;
+    color: #00538c;
+    text-decoration: none;
+    transition: 1s;
+}
+
+#btn:hover{
+    background-color: #333;
+    border: 10px solid #37bcf9;
+    border-radius: 240px;
+    box-shadow: 0px 0px 10px gray;
+    animation: blink 10s infinite linear;
+}
+
+#btn:hover a{
+    color: white;
+    text-shadow: 1px 1px 1px black, 1px 2px 1px black, 1px 3px 1px black, 1px 4px 1px black, 1px 5px 1px black, 1px 6px 1px black;
+}
+
+.lateral {
+    height: 350px;
+}
+
+#footer{
+    width: 100%;
+    height: 470px;
+    overflow: hidden;
+}
+
+#footer .wrap{
+    width: 320px;
+    height: 370px;
+    margin: 40px;
+    text-align: center;
+    color: white;
+    font-family: "TrebuchetMS";
+}
+
+
+#footer ul{
+    text-align: left;
+    margin: 20px;
+    font-size: 25px;
+}
+
+#footer ul li{
+    margin-top: 10px;
+    padding: 5px;
+    border-bottom: 1px solid #ccc;
+}
+
+#footer ul li a{
+    height: 40px;
+    transition: all 300ms;
+    text-decoration: none;
+    list-style: none;
+    color: #37bcf9;;
+}
+
+#footer ul li:hover a{
+    padding-left: 40px;
+    color: white;
+}
 
 
 
