--- a/css/sytle.css
+++ b/css/sytle.css
@@ -31,8 +31,27 @@
     width: 200px;
 }
 
+.navbar img {
+    width: 300px;
+}
+
 .nav-link {
     color: white
+}
+
+.menu_navegacion a{
+    font-size: 20px;
+}
+
+.card {
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: all 400ms ease;
+}
+
+.card:hover {
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+    transform: translateY(-3%);
 }
 
 #btn {
@@ -66,6 +85,7 @@
     text-shadow: 1px 1px 1px black, 1px 2px 1px black, 1px 3px 1px black, 1px 4px 1px black, 1px 5px 1px black, 1px 6px 1px black;
 }
 
+
 #productos h2 {
     text-align: center;
 }
@@ -77,7 +97,7 @@
 
 #footer{
     width: 100%;
-    height: 470px;
+    height: 350px;
     overflow: hidden;
 }
 
