--- a/css/sytle.css
+++ b/css/sytle.css
@@ -17,9 +17,9 @@
     line-height: 50px;
 }
 
-.menu_navegacion {
+/* .menu_navegacion {
     margin-left: 880px;
-}
+} */
 
 .item {
     width: 300px;
@@ -46,7 +46,7 @@
 .menu_navegacion a{
     font-size: 20px;
 }
-
+ 
 .card {
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
     cursor: pointer;
@@ -69,6 +69,7 @@
     margin-top: 60px;
     margin-left: 765px;
     line-height: 70px;
+    position: relative;
     text-align: center;
     transition: all 1s;
 }
@@ -98,5 +99,10 @@
 #productos h2 {
     text-align: center;
     font-size: 40px;
+}
+
+.carousel {
+    max-height: 800px;
+    overflow: hidden;
 }
 
