--- a/css/sytle.css
+++ b/css/sytle.css
@@ -17,9 +17,9 @@
     line-height: 50px;
 }
 
-/* .menu_navegacion {
+.menu_navegacion {
     margin-left: 880px;
-} */
+} 
 
 .item {
     width: 300px;
