--- a/css/sytle.css
+++ b/css/sytle.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+body{
+    width: 100vw;
+    height: 100vh;
+}
+
 #menu {
     height: 50px;
 }
@@ -17,9 +22,6 @@
     line-height: 50px;
 }
 
-.menu_navegacion {
-    margin-left: 880px;
-} 
 
 .item {
     width: 300px;
@@ -45,6 +47,7 @@
 
 .menu_navegacion a{
     font-size: 20px;
+    color: white;
 }
  
 .card {
@@ -104,5 +107,12 @@
 .carousel {
     max-height: 800px;
     overflow: hidden;
+}
+
+
+/*Estilos de Quienes_somos*/
+
+.menu-page2 {
+    width: 300px;
 }
 
